Add a link to a page tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,12 +7,22 @@
 </head>
 <body>
     <h1>Welcome to My  Basic HTML Page</h1>
-    <p>This first paragraph is a beautiful and wonderful paragraph</p>
+
+        <p>This first paragraph is a beautiful and wonderful paragraph</p>
+
     <h2>Welcome back to my basic HTML page</h2>
-    <p>This second paragraph is a beautiful and wonderful paragraph</p>
+
+        <p>This second paragraph is a beautiful and wonderful paragraph</p>
+
     <h3>Then welcome back to my basic HTML page</h3>
-    <p>This third paragraph is a beautiful and wonderful paragraph</p>
-    <a href="#"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Alx logo"></a>
-    <p>This fourth paragraph is a beautiful and wonderful paragraph</p>
+
+        <p>This third paragraph is a beautiful and wonderful paragraph</p>
+
+        <a href="#"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Alx logo"></a>
+
+        <p>This fourth paragraph is a beautiful and wonderful paragraph</p>
+
+        <p>You want to see my tweets? <a href="tweets.html">Click here</a></p>
+
 </body>
 </html>
