--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,23 +6,24 @@
     <title>Basic HTML Page</title>
 </head>
 <body>
-    <h1>Welcome to My  Basic HTML Page</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <a href="alxafrica.com"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Alx logo"></a>
 
-        <p>This first paragraph is a beautiful and wonderful paragraph</p>
-
-    <h2>Welcome back to my basic HTML page</h2>
-
-        <p>This second paragraph is a beautiful and wonderful paragraph</p>
-
-    <h3>Then welcome back to my basic HTML page</h3>
-
-        <p>This third paragraph is a beautiful and wonderful paragraph</p>
-
-        <a href="#"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Alx logo"></a>
-
-        <p>This fourth paragraph is a beautiful and wonderful paragraph</p>
-
-        <p>You want to see my tweets? <a href="tweets.html">Click here</a></p>
-
+            <p>This fourth paragraph is a beautiful and wonderful paragraph</p>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+            <p>Made by <Mounir sirajeddin> - <a href="<mounir.ma>" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
