--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,6 +17,42 @@
             <a href="alxafrica.com"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Alx logo"></a>
 
             <p>This fourth paragraph is a beautiful and wonderful paragraph</p>
+
+            <div>
+                <h2>Learners Information</h2>
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </article>
         <aside>
             <p>placeholder to add comment thread later</p>
