--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,9 +7,10 @@
     <link href="styles.css" rel="stylesheet">
     <title>Basic HTML Page</title>
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&spades;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
